--- a/index.html
+++ b/index.html
@@ -14,23 +14,33 @@
     <div class="cardContainer">
         <div class="card">
             <div class="icon" id="cat"></div>
-            <button class="viewButton">View Code</button>
+            <div class="viewButton">
+                <a href="bird.html">View Code</a>
+            </div>
         </div>
         <div class="card">
             <div class="icon" id="dog"></div>
-            <button class="viewButton">View Code</button>
+            <div class="viewButton">
+                <a href="bird.html">View Code</a>
+            </div>
         </div>
         <div class="card">
             <div class="icon" id="plane"></div>
-            <button class="viewButton">View Code</button>
+            <div class="viewButton">
+                <a href="bird.html">View Code</a>
+            </div>
         </div>
         <div class="card">
             <div class="icon" id="ladyBug"></div>
-            <button class="viewButton">View Code</button>
+            <div class="viewButton">
+                <a href="bird.html">View Code</a>
+            </div>
         </div>
         <div class="card">
             <div class="icon" id="bird"></div>
-            <button class="viewButton">View Code</button>
+            <div class="viewButton">
+                <a href="bird.html">View Code</a>
+            </div>
         </div>
     </div>
 
