--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         <div class="card">
             <div class="icon" id="cat"></div>
             <div class="viewButton">
-                <a href="bird.html">View Code</a>
+                <a href="404.html">View Code</a>
             </div>
         </div>
         <div class="card">
             <div class="icon" id="dog"></div>
             <div class="viewButton">
-                <a href="bird.html">View Code</a>
+                <a href="404.html">View Code</a>
             </div>
         </div>
         <div class="card">
             <div class="icon" id="plane"></div>
             <div class="viewButton">
-                <a href="bird.html">View Code</a>
+                <a href="404.html">View Code</a>
             </div>
         </div>
         <div class="card">
             <div class="icon" id="ladyBug"></div>
             <div class="viewButton">
-                <a href="bird.html">View Code</a>
+                <a href="404.html">View Code</a>
             </div>
         </div>
         <div class="card">
