--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
     <h1>TM240 Question 2</h1>
     <h3>Select a Drawing</h3>
     <div class="cardContainer">
@@ -43,7 +44,6 @@
             </div>
         </div>
     </div>
-
-
+    </main>
 </body>
 </html>
