added cat drawing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="card">
             <div class="icon" id="cat"></div>
             <div class="viewButton">
-                <a href="404.html">View Code</a>
+                <a href="cat.html">View Code</a>
             </div>
         </div>
         <div class="card">
